--- a/css/main.css
+++ b/css/main.css
@@ -117,7 +117,7 @@ header {
   flex-wrap: wrap;
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1230px) {
   header {
     flex-direction: column;
     align-items: flex-start;
@@ -128,7 +128,7 @@ header {
   margin-right: 50px;
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1230px) {
   .logo {
     margin-bottom: 2rem;
   }
@@ -139,7 +139,7 @@ header {
   height: 50px;
 }
 
-@media (max-width: 650px) {
+@media (max-width: 670px) {
   .logo img {
     width: 150px;
     height: 37.5px;
@@ -151,7 +151,7 @@ header {
   flex-wrap: wrap;
 }
 
-@media (max-width: 650px) {
+@media (max-width: 670px) {
   .header-nav ul {
     justify-content: center;
   }
@@ -172,13 +172,13 @@ header {
   line-height: 47px;
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 1230px) {
   .index-main h1 {
     font-size: 24px;
   }
 }
 
-@media (max-width: 650px) {
+@media (max-width: 670px) {
   .index-main h1 {
     font-size: 14px;
     top: 35px;
@@ -195,7 +195,7 @@ header {
   width: 30%;
 }
 
-@media (max-width: 650px) {
+@media (max-width: 670px) {
   .photographer {
     width: 50%;
   }
@@ -203,6 +203,7 @@ header {
 
 .photographer a {
   text-decoration: none;
+  text-align: center;
 }
 
 .photographer__profile-img {
