--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -1,5 +1,5 @@
 header {
-  margin: 40px 40px 50px 40px;
+  margin: 40px 50px 0px 50px;
   display: flex;
   align-items: center;
   flex-wrap: wrap;
@@ -7,12 +7,13 @@ header {
     flex-direction: column;
     align-items: flex-start;
   }
+  @include phones-rules {
+    margin: 20px 25px 0px 25px;
+  }
 }
 
 .logo {
-  margin-right: 50px;
   @include tablets-rules {
-    margin-bottom: 2rem;
   }
   img {
     width: 200px;
@@ -25,11 +26,19 @@ header {
 }
 
 .header-nav {
+  margin: 20px 0px 20px 20px;
   ul {
     display: flex;
     flex-wrap: wrap;
     @include phones-rules {
       justify-content: center;
     }
+  }
+}
+
+.header-photographer-page {
+  margin: 20px 10px 20px 50px;
+  @include phones-rules {
+    margin: 20px 10px 20px 10px;
   }
 }
