--- a/scss/components/_select-button.scss
+++ b/scss/components/_select-button.scss
@@ -15,8 +15,37 @@
   }
 }
 
-.select-button {
-  text-align: center;
-  &__option {
+.sort-by-menu {
+  position: relative;
+  display: flex;
+  flex: nowrap;
+  flex-direction: column;
+  border-radius: 8px;
+  background-color: $primary-color;
+  padding: 5px;
+  & :hover {
+    .sort-by-menu button {
+      display: none;
+    }
   }
+  &--outline {
+    box-shadow: 0px -16px 0px -15px #ffffff;
+  }
+  & button {
+    cursor: pointer;
+    &:hover {
+      background-color: darken($primary-color, 2%);
+    }
+  }
+  &-arrow {
+    position: absolute;
+    right: 20px;
+    top: 37px;
+    color: white;
+    cursor: pointer;
+  }
+}
+
+.rotate-180 {
+  transform: rotate(180deg);
 }
