--- a/scss/main.scss
+++ b/scss/main.scss
@@ -15,5 +15,8 @@
 @import './components/buttons';
 @import './components/media';
 @import './components/select-button';
+@import './components/photographer-page-footer';
+@import './components/lightbox';
+@import './components/form';
 
 @import './pages/index-queries';
