push avant soutenance

--- a/scss/components/_lightbox.scss
+++ b/scss/components/_lightbox.scss
@@ -56,7 +56,7 @@
     z-index: 12;
     @include phones-rules {
       background: url(/img/icons/cross.svg) center center / 12px 12px no-repeat;
-      top: 27vh;
+      top: 390px;
       right: -25px;
     }
   }
