--- a/scss/base/_reset.scss
+++ b/scss/base/_reset.scss
@@ -105,3 +105,15 @@ input {
   -webkit-appearance: none;
   border-radius: 0;
 }
+
+button,
+input[type='submit'],
+input[type='reset'] {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+}
